==> fpistm/Arduino_Core_STM32F0/system/libstm32f0/source/timer.c <==
#include "stm32f0xx.h"
#include "hw_config.h"
#include "timer.h"
#include "digital_io.h"
#include "clock.h"
#include "analog.h"

void TimerHandleInit(timer_id_e timer_id, uint16_t period, uint16_t prescaler)
{
  if(timer_id >= NB_TIMER_MANAGED) return;

  g_TimerHandle[timer_id].Instance               = g_timer_config[timer_id].timInstance;
  g_TimerHandle[timer_id].Init.Period            = period;
  g_TimerHandle[timer_id].Init.Prescaler         = prescaler;
  g_TimerHandle[timer_id].Init.ClockDivision     = 0;
  g_TimerHandle[timer_id].Init.CounterMode       = TIM_COUNTERMODE_UP;
  g_TimerHandle[timer_id].Init.RepetitionCounter = 0;

  if(HAL_TIM_Base_Init(&g_TimerHandle[timer_id]) != HAL_OK){
    return;
  }

  if(HAL_TIM_Base_Start_IT(&g_TimerHandle[timer_id]) != HAL_OK);{
    return;
  }
}

void TimerHandleDeinit(timer_id_e timer_id)
{
  HAL_TIM_Base_DeInit(&g_TimerHandle[timer_id]);
  HAL_TIM_Base_Stop_IT(&g_TimerHandle[timer_id]);
}

void TimerPulseInit(timer_id_e timer_id, uint16_t period, uint16_t pulseWidth, void (*irqHandle)(timer_id_e, uint32_t))
{
  TIM_OC_InitTypeDef sConfig;

  if(timer_id >= NB_TIMER_MANAGED) return;
  if(g_timer_config[timer_id].configured == 1) return;


  //min pulse = 1us - max pulse = 65535us
  g_TimerHandle[timer_id].Instance               = g_timer_config[timer_id].timInstance;
  g_TimerHandle[timer_id].Init.Period            = period;
  g_TimerHandle[timer_id].Init.Prescaler         = (uint32_t)(HAL_RCC_GetHCLKFreq() / 1000000) - 1;
  g_TimerHandle[timer_id].Init.ClockDivision     = 0;
  g_TimerHandle[timer_id].Init.CounterMode       = TIM_COUNTERMODE_UP;
  g_TimerHandle[timer_id].Init.RepetitionCounter = 0;

  g_timer_config[timer_id].irqHandleOC = irqHandle;

  sConfig.OCMode = TIM_OCMODE_TIMING;
  sConfig.Pulse = pulseWidth;

  if(HAL_TIM_OC_Init(&g_TimerHandle[timer_id]) != HAL_OK) return;

  if(HAL_TIM_OC_ConfigChannel(&g_TimerHandle[timer_id],&sConfig, TIM_CHANNEL_1) != HAL_OK) return;
  if(HAL_TIM_OC_Start_IT(&g_TimerHandle[timer_id], TIM_CHANNEL_1) != HAL_OK) return;
}

void TimerPulseDeinit(timer_id_e timer_id)
{
  if(timer_id >= NB_TIMER_MANAGED) return;

  g_timer_config[timer_id].irqHandleOC = NULL;

  if(HAL_TIM_OC_DeInit(&g_TimerHandle[timer_id]) != HAL_OK) return;
  if(HAL_TIM_OC_Stop_IT(&g_TimerHandle[timer_id], TIM_CHANNEL_1) != HAL_OK) return;
}

void TimerPinInit(GPIO_TypeDef *port, uint32_t pin, uint32_t frequency, uint32_t duration)
{
  uint8_t end = 0;
  uint32_t prescaler = 1;
  uint32_t period = 0;
  timer_id_e timer_id;

  timer_id = isPinAssociateToTimer(port,pin);

  if(timer_id == NB_TIMER_MANAGED) {
    timer_id = getInactiveTimer();
    if(timer_id == NB_TIMER_MANAGED)
      return;
  }

  if(frequency > MAX_FREQ)
    return;

  g_timer_config[timer_id].toggle_pin.port = port;
  g_timer_config[timer_id].toggle_pin.pin = pin;
  g_timer_config[timer_id].toggle_pin.state = 0;

  //Calculate the toggle count
  if (duration > 0) {
    g_timer_config[timer_id].toggle_pin.count = ((frequency * duration) / 1000) * 2;
  }
  else {
    g_timer_config[timer_id].toggle_pin.count = -1;
  }

  digital_io_init(port, pin, GPIO_MODE_OUTPUT_PP, GPIO_NOPULL);

  while(end == 0) {
    period = ((uint32_t)(HAL_RCC_GetHCLKFreq() / frequency / prescaler) / 2) - 1;

    if((period >= g_timer_config[timer_id].prescalerLimit)
        && (prescaler < g_timer_config[timer_id].prescalerLimit))
      prescaler++; //prescaler *= 2;
    else
      end = 1;
  }

  if((period < g_timer_config[timer_id].prescalerLimit)
      && (prescaler < g_timer_config[timer_id].prescalerLimit)) {
    g_timer_config[timer_id].irqHandle = HAL_TIMx_PeriodElapsedCallback;
    TimerHandleInit(timer_id, period, prescaler-1);
  }
  else {
    TimerHandleDeinit(timer_id);
  }
}

uint32_t getTimerCounter(timer_id_e timer_id)
{
  if(timer_id < NB_TIMER_MANAGED)
    return __HAL_TIM_GET_COUNTER(&g_TimerHandle[timer_id]);
  else
    return 0;
}

void setTimerCounter(timer_id_e timer_id, uint32_t value)
{
  if(timer_id < NB_TIMER_MANAGED)
    __HAL_TIM_SET_COUNTER(&g_TimerHandle[timer_id], value);
}

void setCCRRegister(timer_id_e timer_id, uint32_t channel, uint32_t value)
{
  if(timer_id < NB_TIMER_MANAGED) {
    __HAL_TIM_SET_COMPARE(&g_TimerHandle[timer_id], channel*4, value);
  }
}
