==> stm32duino/Arduino_Core_STM8/cores/arduino/stm8/timer.c <==
#include "stm8_def.h"
#include "timer.h"
#include "digital_io.h"
#include "pins_arduino.h"

  void TimerHandleInit(timer_id_e timer_id, uint16_t period, uint16_t prescaler)
  {
    if (timer_id >= NB_TIMER_MANAGED)
      return;
    switch (timer_id)
    {
#if defined(STM8Sxx)
    case TIM1_E:
      TIM1_DeInit();
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER1, ENABLE);
      TIM1_TimeBaseInit(prescaler, TIM1_COUNTERMODE_UP, period, 0);
      TIM1_ITConfig(TIM1_IT_UPDATE, ENABLE);
      TIM1_Cmd(ENABLE);
      g_timer_config[TIM1_E].configured = 1;
      break;

    case TIM2_E:
      TIM2_DeInit();
      if (IS_TIM2_PRESCALER_OK((TIM2_Prescaler_TypeDef)prescaler) == 0)
      {
        return;
      }
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER2, ENABLE);
      TIM2_TimeBaseInit((TIM2_Prescaler_TypeDef)prescaler, period);
      TIM2_ITConfig(TIM2_IT_UPDATE, ENABLE);
      TIM2_Cmd(ENABLE);
      g_timer_config[TIM2_E].configured = 1;
      break;

    case TIM3_E:
      TIM3_DeInit();
      if (IS_TIM3_PRESCALER_OK((TIM3_Prescaler_TypeDef)prescaler) == 0)
      {
        return;
      }
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER3, ENABLE);
      TIM3_TimeBaseInit((TIM3_Prescaler_TypeDef)prescaler, period);
      TIM3_ITConfig(TIM3_IT_UPDATE, ENABLE);
      TIM3_Cmd(ENABLE);
      g_timer_config[TIM3_E].configured = 1;
      break;

    case TIM4_E:
      TIM4_DeInit();
      if (IS_TIM4_PRESCALER_OK(prescaler) == 0)
      {
        return;
      }
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER4, ENABLE);
      TIM4_TimeBaseInit((TIM4_Prescaler_TypeDef)prescaler, (uint8_t)period);
      TIM4_ITConfig(TIM4_IT_UPDATE, ENABLE);
      TIM4_Cmd(ENABLE);
      g_timer_config[TIM4_E].configured = 1;
      break;

    default:
      break;
#endif
#if defined(STM8Lxx)
    case TIM1_E:
      TIM1_DeInit();
      CLK_PeripheralClockConfig(CLK_Peripheral_TIM1, ENABLE);
      TIM1_TimeBaseInit(prescaler, TIM1_CounterMode_Up, period, 0);
      TIM1_ITConfig(TIM1_IT_Update, ENABLE);
      TIM1_Cmd(ENABLE);
      g_timer_config[TIM1_E].configured = 1;
      break;

    case TIM2_E:
      TIM2_DeInit();
      if (IS_TIM2_PRESCALER((TIM2_Prescaler_TypeDef)prescaler) == 0)
      {
        return;
      }
      CLK_PeripheralClockConfig(CLK_Peripheral_TIM2, ENABLE);
      TIM2_TimeBaseInit((TIM2_Prescaler_TypeDef)prescaler, TIM2_CounterMode_Up, period);
      TIM2_ITConfig(TIM2_IT_Update, ENABLE);
      TIM2_Cmd(ENABLE);
      g_timer_config[TIM2_E].configured = 1;
      break;

    case TIM3_E:
      TIM3_DeInit();
      if (IS_TIM3_PRESCALER((TIM3_Prescaler_TypeDef)prescaler) == 0)
      {
        return;
      }
      CLK_PeripheralClockConfig(CLK_Peripheral_TIM3, ENABLE);
      TIM3_TimeBaseInit((TIM3_Prescaler_TypeDef)prescaler, TIM3_CounterMode_Up, period);
      TIM3_ITConfig(TIM3_IT_Update, ENABLE);
      TIM3_Cmd(ENABLE);
      g_timer_config[TIM3_E].configured = 1;
      break;

    case TIM4_E:
      TIM4_DeInit();
      if (IS_TIM4_Prescaler(prescaler) == 0)
      {
        return;
      }
      CLK_PeripheralClockConfig(CLK_Peripheral_TIM4, ENABLE);
      TIM4_TimeBaseInit((TIM4_Prescaler_TypeDef)prescaler, (uint8_t)period);
      TIM4_ITConfig(TIM4_IT_Update, ENABLE);
      TIM4_Cmd(ENABLE);
      g_timer_config[TIM4_E].configured = 1;
      break;

    default:
      break;
#endif
    }

    enableInterrupts();
  }

  void TimerHandleDeinit(timer_id_e timer_id)
  {
    switch (timer_id)
    {
    case TIM1_E:
      TIM1_DeInit();
      g_timer_config[TIM1_E].configured = 0;
      break;

    case TIM2_E:
      TIM2_DeInit();
      g_timer_config[TIM2_E].configured = 0;
      break;

    case TIM3_E:
      TIM3_DeInit();
      g_timer_config[TIM3_E].configured = 0;
      break;

    case TIM4_E:
      TIM4_DeInit();
      g_timer_config[TIM4_E].configured = 0;
      break;

    default:
      break;
    }
  }

  void TimerPulseInit(timer_id_e timer_id, uint16_t period, uint16_t pulseWidth,
                      void (*irqHandle)(timer_id_e, uint8_t))
  {
    if (timer_id >= NB_TIMER_MANAGED)
      return;
    if (g_timer_config[timer_id].configured == 1)
      return;
#if defined(STM8Sxx)
    switch (timer_id)
    {
    case TIM1_E:
      TIM1_DeInit();
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER1, ENABLE);
      TIM1_TimeBaseInit((uint16_t)(CLK_GetClockFreq() / 1000000) - 1,
                        TIM1_COUNTERMODE_UP, period, 0);
      TIM1_OC1Init(TIM1_OCMODE_TIMING, TIM1_OUTPUTSTATE_DISABLE,
                   TIM1_OUTPUTNSTATE_DISABLE, pulseWidth, TIM1_OCPOLARITY_LOW,
                   TIM1_OCNPOLARITY_LOW, TIM1_OCIDLESTATE_RESET,
                   TIM1_OCNIDLESTATE_RESET);
      TIM1_ITConfig(TIM1_IT_CC1, ENABLE);
      TIM1_Cmd(ENABLE);
      break;

    case TIM2_E:
      TIM2_DeInit();
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER2, ENABLE);
      TIM2_TimeBaseInit(TIM2_PRESCALER_16, period);
      TIM2_OC1Init(TIM2_OCMODE_TIMING, TIM2_OUTPUTSTATE_DISABLE, pulseWidth,
                   TIM2_OCPOLARITY_LOW);
      TIM2_ITConfig(TIM2_IT_CC1, ENABLE);
      TIM2_Cmd(ENABLE);
      g_timer_config[TIM2_E].configured = 1;
      g_timer_config[TIM2_E].irqHandleOC = irqHandle;
      break;

    case TIM3_E:
      TIM3_DeInit();
      CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER3, ENABLE);
      TIM3_TimeBaseInit(TIM3_PRESCALER_16, period);
      TIM3_OC1Init(TIM3_OCMODE_TIMING, TIM3_OUTPUTSTATE_DISABLE, pulseWidth,
                   TIM3_OCPOLARITY_LOW);
      TIM3_ITConfig(TIM3_IT_CC1, ENABLE);
      TIM3_Cmd(ENABLE);
      g_timer_config[TIM3_E].configured = 1;
      g_timer_config[TIM3_E].irqHandleOC = irqHandle;
      break;

    default:
      return;
      break;
    }
#elif defined(STM8Lxx)
  switch (timer_id)
  {
  case TIM1_E:
    TIM1_DeInit();
    CLK_PeripheralClockConfig(CLK_Peripheral_TIM1, ENABLE);
    TIM1_TimeBaseInit((uint16_t)(CLK_GetClockFreq() / 1000000) - 1,
                      TIM1_CounterMode_Up, period, 0);
    TIM1_OC1Init(TIM1_OCMode_Timing, TIM1_OutputState_Disable,
                 TIM1_OutputNState_Disable, pulseWidth, TIM1_OCPolarity_Low,
                 TIM1_OCNPolarity_Low, TIM1_OCIdleState_Reset,
                 TIM1_OCNIdleState_Reset);
    TIM1_ITConfig(TIM1_IT_CC1, ENABLE);
    TIM1_Cmd(ENABLE);
    break;

  case TIM2_E:
    TIM2_DeInit();
    CLK_PeripheralClockConfig(CLK_Peripheral_TIM2, ENABLE);
    TIM2_TimeBaseInit(TIM2_Prescaler_16, TIM2_CounterMode_Up, period);
    TIM2_OC1Init(TIM2_OCMode_Timing, TIM2_OutputState_Disable, pulseWidth,
                 TIM2_OCPolarity_Low, TIM2_OCIdleState_Reset);
    TIM2_ITConfig(TIM2_IT_CC1, ENABLE);
    TIM2_Cmd(ENABLE);
    g_timer_config[TIM2_E].configured = 1;
    g_timer_config[TIM2_E].irqHandleOC = irqHandle;
    break;

  case TIM3_E:
    TIM3_DeInit();
    CLK_PeripheralClockConfig(CLK_Peripheral_TIM3, ENABLE);
    TIM3_TimeBaseInit(TIM2_Prescaler_16, TIM3_CounterMode_Up, period);
    TIM3_OC1Init(TIM3_OCMode_Timing, TIM3_OutputState_Disable, pulseWidth,
                 TIM3_OCPolarity_Low, TIM3_OCIdleState_Reset);
    TIM3_ITConfig(TIM3_IT_CC1, ENABLE);
    TIM3_Cmd(ENABLE);
    g_timer_config[TIM3_E].configured = 1;
    g_timer_config[TIM3_E].irqHandleOC = irqHandle;
    break;

  default:
    return;
    break;
  }
#endif
    g_timer_config[TIM1_E].configured = 1;
    g_timer_config[TIM1_E].irqHandleOC = irqHandle;
  }

  void TimerPulseDeinit(timer_id_e timer_id)
  {
    if (timer_id >= NB_TIMER_MANAGED)
      return;

    switch (timer_id)
    {
    case TIM1_E:
      TIM1_DeInit();
      break;

    case TIM2_E:
      TIM2_DeInit();
      break;

    case TIM3_E:
      TIM3_DeInit();
      break;

    default:
      return;
      break;
    }

    g_timer_config[timer_id].irqHandleOC = 0;
    g_timer_config[TIM1_E].configured = 0;
  }

  void TimerPinInit(uint8_t pin, uint32_t frequency, uint32_t duration)
  {
    uint8_t end = 0;
    uint32_t timClkFreq = 0;
    //  TIMER_TONE FREQ is Twice frequency
    uint32_t timFreq = 2 * frequency;
    uint32_t prescaler = 1;
    uint32_t period = 0;
    uint32_t scale = 0;
    timer_id_e timer_id;
#if defined(STM8Sxx)
    timer_id = TIM2_E; // isPinAssociateToTimer(port,pin);
#elif defined(STM8Lxx)
    timer_id = TIM1_E; // isPinAssociateToTimer(port,pin);
#endif

    if (frequency > MAX_FREQ)
      return;

    g_timer_config[timer_id].toggle_pin.pin = pin;
    g_timer_config[timer_id].toggle_pin.state = 0;

    if (frequency == 0)
    {
      TimerPinDeinit(pin);
      return;
    }

    //Calculate the toggle count
    if (duration > 0)
    {
      g_timer_config[timer_id].toggle_pin.count = ((timFreq * duration) / 1000);
    }
    else
    {
      g_timer_config[timer_id].toggle_pin.count = -1;
    }
#if defined(STM8Sxx)
    digital_io_init(digitalPinToPinName(pin), GPIO_MODE_OUT_PP_LOW_FAST, 0);
#endif
#if defined(STM8Lxx)
  digital_io_init(digitalPinToPinName(pin), GPIO_Mode_Out_PP_Low_Fast, 0);
#endif
    timClkFreq = CLK_GetClockFreq();

    //Do this Once
    scale = timClkFreq / timFreq;
    while (end == 0)
    {
      period = ((uint32_t)(scale / prescaler)) - 1;
      if ((period >= 0xFFFF) && (prescaler < 0xFFFF))
        prescaler++; //prescaler *= 2;
      else
        end = 1;
    }

    if ((period < 0xFFFF) && (prescaler < 0xFFFF))
    {
      g_timer_config[timer_id].irqHandle = HAL_TIMx_PeriodElapsedCallback;
      TimerHandleInit(timer_id, period, prescaler - 1);
    }
    else
    {
      TimerHandleDeinit(timer_id);
    }
  }

  uint16_t getTimerCounter(timer_id_e timer_id)
  {
    uint16_t data = 0;

    if (timer_id < NB_TIMER_MANAGED)
    {
      switch (timer_id)
      {
      case TIM1_E:
        data = TIM1_GetCounter();
        break;

      case TIM2_E:
        data = TIM2_GetCounter();
        break;

      case TIM3_E:
        data = TIM3_GetCounter();
        break;

      case TIM4_E:
        data = (uint16_t)TIM4_GetCounter();
        break;

      default:
        break;
      }

      return data;
    }
    else
    {
      return 0;
    }
  }

  void setTimerCounter(timer_id_e timer_id, uint16_t value)
  {
    if (timer_id < NB_TIMER_MANAGED)
    {
      switch (timer_id)
      {
      case TIM1_E:
        TIM1_SetCounter(value);
        break;

      case TIM2_E:
        TIM2_SetCounter(value);
        break;

      case TIM3_E:
        TIM3_SetCounter(value);
        break;

      case TIM4_E:
        TIM4_SetCounter((uint8_t)value);
        break;

      default:
        break;
      }
    }
  }

  void setCCRRegister(timer_id_e timer_id, uint8_t channel, uint16_t value)
  {
    if (timer_id < NB_TIMER_MANAGED)
    {
#if defined(STM8Sxx)
      switch (timer_id)
      {
      case TIM1_E:
        if (channel == TIM1_CHANNEL_1)
        {
          TIM1_SetCompare1(value);
        }
        else if (channel == TIM1_CHANNEL_2)
        {
          TIM1_SetCompare2(value);
        }
        else if (channel == TIM1_CHANNEL_3)
        {
          TIM1_SetCompare3(value);
        }
        else if (channel == TIM1_CHANNEL_4)
        {
          TIM1_SetCompare4(value);
        }
        break;

      case TIM2_E:
        if (channel == TIM2_CHANNEL_1)
        {
          TIM2_SetCompare1(value);
        }
        else if (channel == TIM2_CHANNEL_2)
        {
          TIM2_SetCompare2(value);
        }
        else if (channel == TIM2_CHANNEL_3)
        {
          TIM2_SetCompare3(value);
        }
        break;

      case TIM3_E:
        if (channel == TIM3_CHANNEL_1)
        {
          TIM3_SetCompare1(value);
        }
        else if (channel == TIM3_CHANNEL_2)
        {
          TIM3_SetCompare2(value);
        }
        break;

      default:
        break;
      }
#endif
#if defined(STM8Lxx)
    switch (timer_id)
    {
    case TIM1_E:
      if (channel == TIM1_Channel_1)
      {
        TIM1_SetCompare1(value);
      }
      else if (channel == TIM1_Channel_2)
      {
        TIM1_SetCompare2(value);
      }
      else if (channel == TIM1_Channel_3)
      {
        TIM1_SetCompare3(value);
      }
      else if (channel == TIM1_Channel_4)
      {
        TIM1_SetCompare4(value);
      }
      break;

    case TIM2_E:
      if (channel == TIM2_Channel_1)
      {
        TIM2_SetCompare1(value);
      }
      else if (channel == TIM2_Channel_2)
      {
        TIM2_SetCompare2(value);
      }
      break;

    case TIM3_E:
      if (channel == TIM3_Channel_1)
      {
        TIM3_SetCompare1(value);
      }
      else if (channel == TIM3_Channel_2)
      {
        TIM3_SetCompare2(value);
      }
      break;

    default:
      break;
    }
#endif
    }
  }
